# wkde-cad

./: .gitignore  README.md  SETUP.md  config.toml  pyproject.toml  requirements.lock.txt  standard_cad.tex  weighted_cad.tex
NEW/Figure1/: RATIONALE.md  SUPPLEMENTARY.md  figure1_phase_transition.py
NEW/Figure2/: RATIONALE.md  figure2_perfect_score_resolution.py
NEW/Figure3/: RATIONALE.md  figure3_randomized_pvalue_instability.py
NEW/Figure4/: RATIONALE.md  figure4_clipping_frontier.py
code/: config.toml
code/scripts/: __init__.py  experiment_summary.py  model_summary.py
code/utils/: data_loader.py  experiment_summary.py  logger.py  model_summary.py  registry.py
docs/: CONCEPT.md
experiments/: exp0.py  exp1.py  experiment_1.py
experiments/model_selection/: breast.csv  breastw.csv  cardio.csv  fault.csv  hepatitis.csv  internetads.csv  ionosphere.csv  lymphography.csv  mammography.csv  mnist.csv  musk.csv  satellite.csv  (+10 more)
figs/: fig1.py
figures/: fig1.py
results/: exp0.csv  exp1_breast_iforest.csv  exp1_ionosphere_inne.csv  exp1_lymphography_copod.csv  exp1_wbc_iforest.csv
source/: model_selection.py  split.py
src/: config.toml  covariate_shift.py  experiment.py  model_selection.py
tests/: test_config_scripts.py  test_covariate_shift.py  test_covariate_shift_summary.py  test_fdr_table.py  test_figure1_phase_transition.py  test_figure2_perfect_score_resolution.py  test_figure3_randomized_pvalue_instability.py  test_figure4_clipping_frontier.py  test_model_selection.py  test_rebuttal_covariate_shift.py  test_registry.py  test_weight_estimators.py
(+81 files in other folders)
