[project]
name = "learning-the-null"
version = "0.1.0"
description = "Supplementary Code"
requires-python = ">=3.12"
dependencies = [
    "nonconform[fdr]==0.95.6",
    "oddball>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
