[project]
name = "learning-the-null"
version = "0.1.0"
description = "Supplementary Code"
requires-python = ">=3.12"
dependencies = [
    "nonconform==0.98.0",
    "oddball==1.3.0",
    "online-fdr==0.0.3",
    "pyod==2.0.5"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
